--- a/app/src/main/res/layout/cardview_password.xml
+++ b/app/src/main/res/layout/cardview_password.xml
@@ -5,18 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     >
-    <!--이메일 카드뷰-->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/cardview_email_layout"
-        android:paddingBottom="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_weight="0.9"
-        >
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/password_cardview_textView"
@@ -48,7 +36,7 @@
             android:id="@+id/prevpw_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="        이메일 : "
+            android:text="기존 비밀번호 : "
             android:layout_marginStart="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/currpw_edittextlayout"
-        android:layout_marginTop="15dp"
+
         app:layout_constraintBottom_toTopOf="@id/currpwchk_edittextlayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
