--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="midgreen">#9FD18C</color>
     <color name="graygreen">#DEE5E0</color>
+    <color name="new_maingreen">#38754C</color>
     <color name="maingreen">#85BD71</color>
     <color name="mainblack">#464646</color>
     <color name="bg_color">#DEE5E0</color>
