--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -1,159 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/graygreen">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/topscreen_homemain"
+        android:id="@+id/topscreen_love"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/menu_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="10dp"
         app:layout_constraintVertical_weight="0.9"
         >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/layout_home"
-        android:background="@color/test_main_clolr"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/layout_popular"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.4"
-        >
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circle_iv"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="10dp"
-            android:src="@drawable/brid_second_img"
-            app:civ_border_color="#000000"
-            app:civ_border_overlay="true"
-            app:civ_border_width="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/username_layout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/username_layout"
-            app:layout_constraintTop_toBottomOf="@+id/circle_iv"
-            app:layout_constraintBottom_toTopOf="@+id/gomakeyourmusic"
+            android:layout_height="0dp"
+            android:id="@+id/layout_home"
+            android:background="@color/graygreen"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/layout_popular"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.15">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="0.5"
+            >
+            <com.scwang.wave.MultiWaveHeader
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/wave_header"
+                app:mwhStartColor="#78AB9A"
+                app:mwhCloseColor="#38754C"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="사용자"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:gravity="right"
-                    android:id="@+id/username"
-                    android:textColor="#ffffff"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/nim"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" 님"
-                    android:textStyle="bold"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp"
-                    android:id="@+id/nim"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/username"
-                    app:layout_constraintRight_toRightOf="parent"
-                    />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+            </com.scwang.wave.MultiWaveHeader>
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circle_iv"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/birdsec"
+                app:civ_border_color="#000000"
+                app:civ_border_overlay="true"
+                app:civ_border_width="0dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="내가 만든 음악"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:id="@+id/username"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/circle_iv"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="내가 만든 음악이 여기에 표시됩니다."
+                android:gravity="center"
+                android:textSize="12sp"
+                android:id="@+id/gomakeyourmusic"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@+id/username"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_weight="0.1"
+                android:layout_marginBottom="20dp"
+                />
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        <TextView
-            android:layout_marginBottom="10dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="나만의 음악을 만들어보세요"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textColor="#ffffff"
-            android:id="@+id/gomakeyourmusic"
-            app:layout_constraintTop_toBottomOf="@+id/username_layout"
+            android:layout_height="0dp"
+            android:id="@+id/layout_popular"
+            android:background="@color/graygreen"
+            app:layout_constraintTop_toBottomOf="@+id/layout_home"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.23"
-            />
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/layout_popular"
-        android:background="@color/graygreen"
-        app:layout_constraintTop_toBottomOf="@+id/layout_home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.8"
-        android:paddingBottom="10dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="인기 순위"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:id="@+id/popular_title"
-            app:layout_constraintTop_toTopOf="@+id/layout_popular"
-            app:layout_constraintBottom_toTopOf="@+id/popularlist"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.1"/>
-        
-        <androidx.recyclerview.widget.RecyclerView
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             app:layout_constraintVertical_weight="0.8"
-            android:id="@+id/popularlist"
-            android:background="@drawable/recycle_background"
-            app:layout_constraintTop_toBottomOf="@+id/popular_title"
-            app:layout_constraintBottom_toBottomOf="@+id/layout_popular"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-        </androidx.recyclerview.widget.RecyclerView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:paddingBottom="10dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintVertical_weight="0.8"
+                android:id="@+id/mycollectionlist"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:id="@+id/emptytxt"
+                android:visibility="gone"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="좋아요 표시한 음악이 없습니다."
+                    android:textSize="20sp"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -163,7 +141,7 @@
         android:id="@+id/menu_bar"
         android:background="@color/graygreen"
         android:layout_alignParentBottom="true"
-        app:layout_constraintTop_toBottomOf="@+id/topscreen_homemain"
+        app:layout_constraintTop_toBottomOf="@+id/topscreen_love"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -341,36 +319,4 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/top_circle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/background_twocircle_transparent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/blank_text1"
-
-        />
-
-    <TextView
-        android:id="@+id/blank_text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="30dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="150dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        />
-    <ImageView
-        android:id="@+id/left_circle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/background_leftcircle_transparent"
-        app:layout_constraintRight_toLeftOf="@id/blank_text1"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
