--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -7,8 +7,6 @@
     android:background="@color/bg_color"
     >
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="280dp"
@@ -124,10 +122,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아티스트 정보"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 android:textColor="#80000000"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/artist_detail_textview"
@@ -169,6 +168,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아티스트 음악"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 android:textColor="#80000000"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
