--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/primarydark_color">
+    android:background="#3a5a40">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
