--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.7dp"
         android:background="@color/gray_sto"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/songinfolayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/unionlayout_info"
         android:paddingHorizontal="22dp"
-        android:layout_marginVertical="30dp"
+        android:layout_marginTop="15dp"
         android:paddingBottom="15dp"
         app:layout_constraintTop_toBottomOf="@+id/linelayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
             app:layout_constraintTop_toBottomOf="@+id/downloadlayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:id="@+id/artistlayout">
 
             <ImageView
@@ -136,7 +136,7 @@
             app:layout_constraintTop_toBottomOf="@+id/artistlayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:id="@+id/creditlayout">
 
             <ImageView
@@ -161,13 +161,77 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/creditlayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
+            android:id="@+id/orilayout">
+
+            <ImageView
+                android:id="@+id/oribtn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/musicnote"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/oritxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/oritxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="원곡 보기"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/oribtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/orilayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="10dp"
+            android:id="@+id/collalayout">
+
+            <ImageView
+                android:id="@+id/collabtn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/musicnote"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/collatxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/collatxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="콜라보레이션 노래 보기"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/collabtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/collalayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="10dp"
             android:id="@+id/collablayout">
 
             <ImageView
