--- a/app/src/main/res/layout/ori_item.xml
+++ b/app/src/main/res/layout/ori_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ranking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/num_background"
+        android:background="@drawable/brown_num_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:textSize="15sp"
             android:gravity="center"
-            android:textColor="@color/start_green"
+            android:textColor="#A3AB78"
             android:text="1" />
     </LinearLayout>
 
