--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -107,4 +107,8 @@
         <!--<item name="android:backgroundTint">#ff000000</item>-->
     </style>
 
+    <style name="SeekBarColor" parent="Widget.AppCompat.SeekBar">
+        <item name="colorAccent">@color/test_main_clolr</item>
+    </style>
+
 </resources>
