스크롤 에러 해결

--- a/app/src/main/res/layout/cardview_password.xml
+++ b/app/src/main/res/layout/cardview_password.xml
@@ -122,6 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="수정 저장"
+        android:textColor="#ffffff"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:textSize="16sp"
